<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="4dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_margin="5sp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp">

        <TextView
            android:id="@+id/word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/word"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/term"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/definition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/definition"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/word"
            tools:text="Defintion" />

        <TextView
            android:id="@+id/example"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/example"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/definition"
            tools:text="example" />

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="end"
            android:text="@string/author"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/example"
            tools:text="author on date" />


        <TextView
            android:id="@+id/thumbs_up"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/thumbsDownImg"
            app:layout_constraintTop_toBottomOf="@+id/author"
            tools:text="35" />

        <TextView
            android:id="@+id/thumbs_down"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/author"
            tools:text="12" />

        <ImageView
            android:id="@+id/thumbsUpImg"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/image_thumbs_up"
            android:src="@drawable/thumbsup"
            app:layout_constraintEnd_toStartOf="@+id/thumbs_up"
            app:layout_constraintTop_toBottomOf="@+id/author" />

        <ImageView
            android:id="@+id/thumbsDownImg"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/image_thumbs_down"
            android:src="@drawable/thumbsdown"
            app:layout_constraintEnd_toStartOf="@+id/thumbs_down"
            app:layout_constraintTop_toBottomOf="@+id/author" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>